# zero-to-production

./: Cargo.toml  Dockerfile  README.md  spec.yml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yml
migrations/: 20220402165618_make_status_not_null_in_subscriptions.sql  20220402165946_create_subscription_tokens_table.sql  20220406171401_create_users_table.sql  20220409160018_seed_user.sql  20220410193148_create_newsletter_issues_table.sql  20220410193908_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.html  dashboard.rs
src/routes/admin/newsletters/: get.rs  newsletter.html  post.rs
src/routes/admin/password/: get.rs  password.html  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
