[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1", features = ["derive"]}
config = "0.11"
uuid = { version = "0.8.1", features = ["v4"]}
chrono = "0.4.19"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1.10.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.5.1"
serde-aux = "3.0.1"
unicode-segmentation = "1.9.0"
claim = "0.5.0"
validator = "0.14.0"
reqwest = {version="0.11.10", features=["json","cookies"]}
rand = { version = "0.8.5", features=["std_rng"] }
thiserror = "1.0.30"
anyhow = "1.0.56"
base64 = "0.13.0"
argon2 = { version = "0.4.0", features = ["std"] }
urlencoding = "2.1.0"
htmlescape = "0.3.1"
actix-web-flash-messages = { version = "0.3.2", features = ["cookies"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }
wiremock = "0.5"
fake = "2.4.3"
serde_json = "1"
linkify = "0.8.0"

